--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PHeroTube</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.6.4/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
-    
+    <header>
+        <nav class="m-14 flex flex-col gap-4 md:flex-row md:justify-between ">
+            <div>
+                <img src="Logo.png" alt="">
+            </div>
+            <div>
+                <button class="btn btn-active">Sort by view</button>
+            </div>
+            <div>
+                <a href="blog.html">
+                    <button class="btn btn-secondary bg-[#FF1F3D]">Blog</button>
+                </a>
+            </div>
+        </nav>
+    </header>
+
+
+
+
+
+
+
+
+
+    <script src="js/phtube.js"></script>
 </body>
+
 </html>
