--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <header>
+        <!-- navbar section  -->
         <nav class="m-14 flex flex-col gap-4 md:flex-row md:justify-between ">
             <div>
                 <img src="Logo.png" alt="">
@@ -24,8 +25,19 @@
                 </a>
             </div>
         </nav>
+        <hr class="mx-14">
     </header>
 
+    <main>
+        <!-- category section -->
+        <section id="category-container" class="my-8 flex flex-col justify-center gap-x-4 md:flex-row">
+            
+        </section>
+
+
+
+
+    </main>
 
 
 
